b=480098 correct weight units in gfxFcFontEntry::AdjustPatternToCSS r=roc

--HG--
extra : rebase_source : 79604f227fc80720e4df479f1d8929f5c21623f2